--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">We offer1 modern solutions for growing your business</h1>
+          <h1 data-aos="fade-up">We offer modern solutions for growing your business</h1>
           <h2 data-aos="fade-up" data-aos-delay="400">We are team of talented designers making websites with Bootstrap</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
@@ -439,21 +439,21 @@ We provide effective solutions on time for every business. Our team has a thirst
                 <div class="info-box">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
-                  <p>Kilburn, <br>London</p>
+                  <p>Sudama Nagar<br>Indore</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="info-box">
                   <i class="bi bi-telephone"></i>
                   <h3>Call Us</h3>
-                  <p>+44 7383084057<br>+44 7951056489</p>
+                  <p>+91 8982072282<br>+91 7509671467</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="info-box">
                   <i class="bi bi-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>pulkit@webgleaners.com<br>tara@webgleaners.com</p>
+                  <p>aniruddha.vashishthe@gmail.com<br>aniket.vsh@gmail.com</p>
                 </div>
               </div>
               <!-- <div class="col-md-6">
@@ -544,8 +544,8 @@ We provide effective solutions on time for every business. Our team has a thirst
             <p>
               Kilburn,<br>
               London<br><br>
-              <strong>Phone:</strong> +44 7383084057<br>
-              <strong>Email:</strong> pulkit@webgleaners.com<br>
+              <strong>Phone:</strong> +91 8982072282<br>
+              <strong>Email:</strong> aniruddha.vashishthe@gmail.com<br>
             </p>
 
           </div>
